api-reference/v2/webhooks/refund-failed.mdx
---
title: "REFUND FAILED"
description: "Technical reference for the REFUND_FAILED webhook event, including payload schema, field specifications, and implementation details."
---

## Event Overview

**Event Type**: `REFUND_FAILED`  
**Category**: Payment  
**Description**: Refund could not be completed

This webhook is triggered when a refund fails to process or its final status could not be confirmed through EximPe.

---

## Delivery Details

| Attribute | Value |
|-----------|--------|
| **HTTP method** | `POST` |
| **URL** | The webhook URL configured on your merchant account's API credentials |
| **Content-Type** | `application/json` |
| **Timeout** | 10 seconds |
| **Retries** | Up to 5 delivery attempts (backoff: 1 min, 5 min, 15 min, 60 min) |

### Headers

| Header | Description |
|--------|-------------|
| `Content-Type` | `application/json` |
| `User-Agent` | `Eximpe-Webhook/1.0` |
| `X-Webhook-Event` | `REFUND_FAILED` |
| `X-Webhook-Timestamp` | Unix timestamp (string) at the time of the request |
| `X-Webhook-Signature` | HMAC-SHA256 signature of the request body (JSON string with keys sorted, no extra whitespace), using your API key as the secret. Hex-encoded. |

**Signature verification (recommended):**  
Compute `HMAC-SHA256(encryption_key, raw_body)` where `raw_body` is the exact UTF-8 request body as received. Compare the hex result with the `X-Webhook-Signature` header to ensure the webhook is from the platform and unchanged.

---

## Payload Schema

<CodeGroup>

```json Example Payload
{
    "data": {
        "refunds": [
            {
                "bank_arn": null,
                "comments": "Refund failed or status unknown",
                "order_id": "OD3391756028",
                "refund_id": "RF4762038159",
                "payment_id": "PR6018394572",
                "refund_amount": 1499,
                "order_reference_id": "REF3391756028",
                "refund_completed_at": null,
                "refund_reference_id": "e6b2a9c4d1f847b3a8e2c5d9f0a7b1c6"
            }
        ]
    },
    "version": "2.0.0",
    "event_time": "2026-06-03T14:30:02.854654",
    "event_type": "REFUND_FAILED",
    "sequence_number": "c5d9e203-8a41-4f7b-bf62-913e07ad4c18"
}
```

</CodeGroup>

## Field Specifications

<Tabs>
  <Tab title="Root Level Fields">
    <ParamField path="event_type" type="string" required>
      Always `"REFUND_FAILED"` for this webhook event
    </ParamField>

    <ParamField path="event_time" type="string" required>
      Timestamp when the event occurred in ISO 8601 format
      
      **Example**: `"2026-06-03T14:30:02.854654"`
    </ParamField>

    <ParamField path="version" type="string" required>
      Webhook payload version (currently "2.0.0")
    </ParamField>

    <ParamField path="sequence_number" type="string" required>
      Unique identifier for the event instance
      
      **Example**: `"c5d9e203-8a41-4f7b-bf62-913e07ad4c18"`
    </ParamField>

    <ParamField path="data" type="object" required>
      Event-specific data payload containing refund details
    </ParamField>
  </Tab>

  <Tab title="Data Object Fields">
    <ParamField path="data.refunds" type="array" required>
      Array of refund objects containing the failed refund information
    </ParamField>

    <ParamField path="data.refunds[].order_id" type="string" required>
      Order ID associated with the refund
      
      **Example**: `"OD3391756028"`
    </ParamField>

    <ParamField path="data.refunds[].refund_id" type="string" required>
      Unique refund identifier
      
      **Example**: `"RF4762038159"`
    </ParamField>

    <ParamField path="data.refunds[].payment_id" type="string" required>
      Original payment ID that the refund was attempted against
      
      **Example**: `"PR6018394572"`
    </ParamField>

    <ParamField path="data.refunds[].refund_amount" type="number" required>
      Refund amount that failed to process
      
      **Example**: `1499`
    </ParamField>

    <ParamField path="data.refunds[].comments" type="string">
      Human-readable reason describing why the refund failed or could not be confirmed
      
      **Example**: `"Refund failed or status unknown"`
    </ParamField>

    <ParamField path="data.refunds[].bank_arn" type="string">
      Bank ARN (Acquirer Reference Number) - `null` when the refund did not reach the bank
      
      **Example**: `null`
    </ParamField>

    <ParamField path="data.refunds[].order_reference_id" type="string">
      Your reference ID for the order associated with the refund
      
      **Example**: `"REF3391756028"`
    </ParamField>

    <ParamField path="data.refunds[].refund_completed_at" type="string">
      Timestamp when the refund completed - `null` for a failed refund
      
      **Example**: `null`
    </ParamField>

    <ParamField path="data.refunds[].refund_reference_id" type="string">
      Unique reference ID for this refund transaction
      
      **Example**: `"e6b2a9c4d1f847b3a8e2c5d9f0a7b1c6"`
    </ParamField>
  </Tab>
</Tabs>
